[gd_scene load_steps=6 format=2]

[ext_resource path="res://StephenAssets/UI9Patches/TranslucentBackground/Purple UI 2.png" type="Texture" id=1]
[ext_resource path="res://Theme/kenneyUI-blue.tres" type="Theme" id=2]
[ext_resource path="res://MainScene/FinalScoreTab/FinalScore.gd" type="Script" id=3]
[ext_resource path="res://StephenAssets/Buttons/Smaller Button/Small button pressed.png" type="Texture" id=4]
[ext_resource path="res://StephenAssets/Buttons/Smaller Button/Small button unpressed.png" type="Texture" id=5]

[node name="NinePatchRect" type="NinePatchRect"]
margin_right = 300.0
margin_bottom = 160.0
theme = ExtResource( 2 )
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 292.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 18.0
text = "Final Score:"
align = 1

[node name="Points" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 292.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Points"]
margin_right = 75.0
margin_bottom = 18.0
text = "Points:"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Points"]
margin_left = 79.0
margin_right = 79.0
margin_bottom = 18.0

[node name="Money" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 292.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Money"]
margin_right = 74.0
margin_bottom = 18.0
text = "Money:"

[node name="MoneyAmount" type="Label" parent="MarginContainer/VBoxContainer/Money"]
margin_left = 78.0
margin_right = 128.0
margin_bottom = 18.0
rect_min_size = Vector2( 50, 18 )

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Money"]
margin_left = 132.0
margin_right = 219.0
margin_bottom = 18.0
text = "(5 mult)"

[node name="MoneyScoreAmount" type="Label" parent="MarginContainer/VBoxContainer/Money"]
margin_left = 223.0
margin_right = 223.0
margin_bottom = 18.0

[node name="FinalScore" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 292.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FinalScore"]
margin_right = 135.0
margin_bottom = 18.0
text = "Final Score: "

[node name="FinalFinalScore" type="Label" parent="MarginContainer/VBoxContainer/FinalScore"]
margin_left = 139.0
margin_right = 139.0
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 292.0
margin_bottom = 127.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 247.0
margin_bottom = 39.0
text = "Thank you for playing!
                                 main menu:"

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 251.0
margin_right = 281.0
margin_bottom = 39.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
